[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/asteroid/Ativo 4.png" type="Texture" id=1]
[ext_resource path="res://assets/images/asteroid/Ativo 5.png" type="Texture" id=2]
[ext_resource path="res://assets/images/asteroid/Ativo 3.png" type="Texture" id=3]
[ext_resource path="res://assets/images/asteroid/Ativo 7.png" type="Texture" id=4]
[ext_resource path="res://assets/images/asteroid/Ativo 8.png" type="Texture" id=5]
[ext_resource path="res://assets/images/asteroid/Ativo 9.png" type="Texture" id=6]
[ext_resource path="res://assets/images/asteroid/Ativo 6.png" type="Texture" id=7]
[ext_resource path="res://assets/images/asteroid/Ativo 1.png" type="Texture" id=8]
[ext_resource path="res://src/Objects/Asteroid.gd" type="Script" id=9]
[ext_resource path="res://assets/images/explosion/Ativo 1.png" type="Texture" id=10]
[ext_resource path="res://assets/images/explosion/Ativo 2.png" type="Texture" id=11]
[ext_resource path="res://assets/images/explosion/Ativo 3.png" type="Texture" id=12]
[ext_resource path="res://assets/images/explosion/Ativo 4.png" type="Texture" id=13]
[ext_resource path="res://assets/images/explosion/Ativo 5.png" type="Texture" id=14]
[ext_resource path="res://assets/images/explosion/Ativo 6.png" type="Texture" id=15]
[ext_resource path="res://assets/images/explosion/Ativo 7.png" type="Texture" id=16]
[ext_resource path="res://assets/images/explosion/Ativo 8.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.4566

[sub_resource type="Animation" id=3]
resource_name = "explosion"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosion:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("explosion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Asteroid" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "spin"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.18921, -0.594624 )
scale = Vector2( 1.71353, 1.8919 )

[node name="explosion_anim" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 3 )

[node name="explosion" type="Sprite" parent="."]
visible = false
position = Vector2( -0.63475, 0.31905 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
[connection signal="area_entered" from="." to="." method="_on_Asteroid_area_entered"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
